--- a/About.html
+++ b/About.html
@@ -11,9 +11,9 @@
         <nav>
             <ul id="navList">
                 <li><a href="#">Home</a></li>
-                <li><a href="/About/">ARGH!</a></li>
-                <li><a href="/Services/">Services</a></li>
-                <li><a href="/Contact/">Contact</a></li>
+                <li><a href="/About.html">ARGH!</a></li>
+                <li><a href="/Services.html">Services</a></li>
+                <li><a href="/Contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
