--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <nav>
             <ul id="navList">
                 <li><a href="#">Home</a></li>
-                <li><a href="#/About.html">About</a></li>
-                <li><a href="#/Services.html">Services</a></li>
-                <li><a href="#/Contact.html">Contact</a></li>
+                <li><a href="/About.html">About</a></li>
+                <li><a href="/Services.html">Services</a></li>
+                <li><a href="/Contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
